examples/test/testpolicy6801.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6801
  namespace: namespace194
spec:
  podSelector:
    matchLabels:
      key4: value30
      key44: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value31
      podSelector:
        matchLabels:
          key32: value6
          key8: value35
